[package]
name = "turbo-json-checker"
version = "1.0.0"
description = "A pushdown automaton low memory JSON bytes stream checker"
authors = ["Bidoubiwa <charlottevermandel@gmail.com>", "tamo <irevoire@protonmail.ch>", "Kerollmops <clement@meilisearch.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/irevoire/turbo-json-checker"
homepage = "https://github.com/irevoire/turbo-json-checker"
readme = "README.md"
default-run = "ojc"
keywords = ["json", "streaming"]

[dependencies]
packed_simd = { version = "0.3.3", optional = true }

[dev-dependencies]
snap = "1.0.0" # for the lib.rs example

[features]
default = []
nightly = ["packed_simd"]
